--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -12,11 +12,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@loadable/component": "^5.15.3",
     "antd": "^5.7.3",
+    "dayjs": "^1.11.9",
+    "lodash": "^4.17.21",
+    "nprogress": "^0.2.0",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router": "^6.14.2",
+    "react-router-dom": "^6.14.2",
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
+    "@types/loadable__component": "^5.13.4",
+    "@types/lodash": "^4.14.196",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
