--- a/.drone.yml
+++ b/.drone.yml
@@ -10,8 +10,7 @@ steps:
     settings:
       host: SSH_HOST
       username: SSH_USERNAME
-      key:
-        from_secret: SSH_KEY
+      password: SSH_PASSWORD
       port: 22
       command_timeout: 2m
       envs: [ENVS]
