--- a/.drone.yml
+++ b/.drone.yml
@@ -8,7 +8,7 @@ steps:
       host: 45.125.34.216
       username: root
       key:
-        from_secret: SSH_KEY
+        from_secret: ssh_key
       port: 22
       command_timeout: 2m
       script:
