--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 6030",
     "build": "next build",
     "start": "next start",
     "lint": "pnpm lint:es && pnpm lint:style",
