--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "build": "nest build",
+    "build": "cross-env NODE_ENV=production nest build",
     "format": "prettier --write \"src/**/*.ts\"",
-    "dev": "nest start --watch",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "dev": "cross-env NODE_ENV=development nest start --watch",
+    "start": "cross-env NODE_ENV=production nest start",
+    "start:dev": "cross-env NODE_ENV=development nest start --watch",
+    "start:debug": "cross-env NODE_ENV=production nest start --debug --watch",
+    "start:prod": "cross-env NODE_ENV=production node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "dependencies": {
@@ -25,11 +25,14 @@
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "camelcase": "^6.3.0",
+    "chalk": "^4.1.2",
     "chokidar": "^3.5.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cross-env": "^7.0.3",
     "date-fns": "^2.30.0",
     "decamelize": "^5.0.1",
+    "dotenv": "^16.3.1",
     "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "fast-glob": "^3.3.2",
