--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "naa",
   "private": true,
-  "version": "1.2.0",
-  "description": "基于 NestJs + Antd 编写的一款前后端分离的权限管理系统",
+  "version": "2.1.0",
+  "description": "基于 Nest + Antd 编写的一款前后端分离的权限管理系统",
   "author": {
     "name": "hexuntao",
     "email": "hexuntao@gmail.com",
@@ -23,10 +23,10 @@
   },
   "packageManager": "pnpm@8.6.10",
   "scripts": {
-    "build": "turbo run build",
-    "dev": "turbo run dev",
-    "dev:api": "turbo run dev --filter=api",
-    "dev:admin": "turbo run dev --filter=admin --filter=api",
+    "build": "dotenv -- turbo run build",
+    "dev": "dotenv -- turbo run dev",
+    "dev:api": "dotenv -- turbo run dev --filter=api",
+    "dev:admin": "dotenv -- turbo run dev --filter=admin --filter=api",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "upall": "pnpm up --filter @naa/* --latest && pnpm up --latest"
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@naa/eslint-config": "workspace:*",
     "@naa/ts-config": "workspace:*",
+    "dotenv-cli": "latest",
     "eslint": "^8.55.0",
     "prettier": "^3.1.1",
     "turbo": "^1.11.2",
