--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@nestjs-modules/ioredis": "^1.0.1",
+    "@nestjs/bull": "^10.0.1",
     "@nestjs/common": "^10.2.10",
     "@nestjs/core": "^10.2.10",
     "@nestjs/jwt": "^10.2.0",
@@ -24,11 +25,13 @@
     "archiver": "^5.3.2",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
+    "bull": "^4.12.0",
     "camelcase": "^6.3.0",
     "chalk": "^4.1.2",
     "chokidar": "^3.5.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cron-parser": "^4.9.0",
     "cross-env": "^7.0.3",
     "date-fns": "^2.30.0",
     "decamelize": "^5.0.1",
