--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "naa",
   "private": true,
-  "version": "2.1.2",
+  "version": "2.1.3",
   "description": "基于 Nest + Antd 编写的一款前后端分离的权限管理系统",
   "author": {
     "name": "hexuntao",
@@ -27,6 +27,7 @@
     "dev": "dotenv -- turbo run dev",
     "dev:api": "dotenv -- turbo run dev --filter=api",
     "dev:admin": "dotenv -- turbo run dev --filter=admin --filter=api",
+    "dev:docs": "dotenv -- turbo run dev --filter=docs",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "upall": "pnpm up --filter @naa/* --latest && pnpm up --latest"
