--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev -p 6030",
     "build": "next build",
-    "start": "next start"
+    "start": "next start -p 6030"
   },
   "dependencies": {
     "next": "^13.5.6",
