--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -30,6 +30,7 @@
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
+    "pretty-bytes": "^7.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.0"
