--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -44,6 +44,7 @@
     "ioredis": "^5.3.2",
     "ip2region": "^2.3.0",
     "lodash": "^4.17.21",
+    "mime": "^3.0.0",
     "mybatis-mapper": "^0.7.1",
     "mysql2": "^3.6.5",
     "nest-winston": "^1.9.4",
@@ -74,6 +75,7 @@
     "@types/fs-extra": "^11.0.4",
     "@types/jest": "^29.5.11",
     "@types/lodash": "^4.14.202",
+    "@types/mime": "^3.0.0",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.10.4",
     "@types/request-ip": "^0.0.38",
