--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -24,6 +24,7 @@
     "antd-img-crop": "^4.21.0",
     "clipboard": "^2.0.11",
     "crypto-js": "^4.2.0",
+    "cropperjs": "^1.6.2",
     "dayjs": "^1.11.11",
     "events": "^3.3.0",
     "file-saver": "^2.0.5",
@@ -32,6 +33,7 @@
     "nprogress": "^0.2.0",
     "pretty-bytes": "^7.1.0",
     "react": "^18.3.1",
+    "react-cropper": "^2.3.3",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.0"
   },
