--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -50,6 +50,7 @@
     "nest-winston": "^1.9.4",
     "nestjs-cls": "^3.6.0",
     "nestjs-typeorm-paginate": "^4.0.4",
+    "pluralize": "^8.0.0",
     "reflect-metadata": "^0.1.14",
     "request-ip": "^3.3.0",
     "rxjs": "^7.8.1",
@@ -78,6 +79,7 @@
     "@types/mime": "^3.0.0",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.10.4",
+    "@types/pluralize": "^0.0.33",
     "@types/request-ip": "^0.0.38",
     "@types/serve-favicon": "^2.5.7",
     "@types/supertest": "^2.0.16",
