--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -23,13 +23,17 @@
     "antd": "^5.16.5",
     "antd-img-crop": "^4.21.0",
     "clipboard": "^2.0.11",
-    "crypto-js": "^4.2.0",
+    "cron": "^4.3.4",
+    "cron-parser": "^4.9.0",
+    "cronstrue": "^2.51.0",
     "cropperjs": "^1.6.2",
+    "crypto-js": "^4.2.0",
     "dayjs": "^1.11.11",
     "events": "^3.3.0",
     "file-saver": "^2.0.5",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "nprogress": "^0.2.0",
     "pretty-bytes": "^7.1.0",
     "react": "^18.3.1",
@@ -43,6 +47,7 @@
     "@types/history": "^5.0.0",
     "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.17.0",
+    "@types/lodash-es": "^4.17.12",
     "@types/nprogress": "^0.2.3",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
