--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@nestjs-modules/ioredis": "^1.0.1",
+    "@nestjs/axios": "^4.0.1",
     "@nestjs/bull": "^10.0.1",
     "@nestjs/common": "^10.2.10",
     "@nestjs/core": "^10.2.10",
@@ -21,9 +22,10 @@
     "@nestjs/mapped-types": "^2.0.4",
     "@nestjs/platform-express": "^10.2.10",
     "@nestjs/swagger": "^7.1.16",
+    "@nestjs/terminus": "^11.0.0",
     "@nestjs/typeorm": "^10.0.1",
     "archiver": "^5.3.2",
-    "axios": "^1.6.2",
+    "axios": "^1.13.2",
     "bcrypt": "^5.1.1",
     "bull": "^4.12.0",
     "camelcase": "^6.3.0",
