--- a/.env.example
+++ b/.env.example
@@ -36,6 +36,9 @@ DB_PASSWORD=123456
 DB_NAME=naa
 
 # Redis地址
+# 如果使用Upstash，请设置 REDIS_URL
+# 如果使用本地Redis，请设置 REDIS_HOST 和 REDIS_PORT
+REDIS_URL=REDIS_URL=
 REDIS_HOST=127.0.0.1
 # Redis端口
 REIDS_PORT=6379
