--- a/apps/api/src/config/config.production.yaml
+++ b/apps/api/src/config/config.production.yaml
@@ -27,6 +27,7 @@ redis:
 # Bull 配置
 bull:
   redis:
+    url: ${{ REDIS_URL }}
     port: ${{ REIDS_PORT || 6379 }}
     host: ${{ REDIS_HOST || 'localhost' }}
     username: ${{ REDIS_USER }}
