--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "upall": "pnpm up --filter @naa/* --latest && pnpm up --latest",
     "prod:api": "cd apps/api && pnpm start:prod",
+    "build:api": "cd apps/api && pnpm build",
     "prod:all": "dotenv -- turbo run build && pnpm prod:api",
     "deploy": "pnpm prod:all",
     "pm2:start": "cd apps/api && pm2 start ecosystem.config.js --name naa-api",
