--- a/.env.example
+++ b/.env.example
@@ -6,11 +6,8 @@
 # 1.带有[必填]标识的配置字段代表
 # 2.不带的均为选填,选填的字段具有自带的默认值
 
-# 域名 [必填]
-APP_URL=https://naa.hexuntao.com
-
-# 监听地址
-API_HOST=127.0.0.1
+# 接口域名 [必填]
+API_URL=https://api.hexuntao.dpdns.org
 # API前缀
 API_PREFIX=api
 # API监听端口
