--- a/apps/admin/vercel.json
+++ b/apps/admin/vercel.json
@@ -1,25 +1,11 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
-    }
-  ],
   "rewrites": [
     {
-      "source": "/test-rewrite",
-      "destination": "/favicon.ico"
-    },
-    {
       "source": "/api/(.*)",
-      "destination": "http://104.233.162.167:6010/api/$1"
+      "destination": "https://api.hexuntao.dpdns.org/api/$1"
     },
     {
-      "source": "/((?!api|.*\\..*$).*)",
+      "source": "/((?!api|_next/static|_next/image|.*\\..*$).*)",
       "destination": "/index.html"
     }
   ]
